# sync-my-zettels

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: assign.md  inventory.md  match.md  normalize.md  port.md  repair-links.md  roots.md  verify.md
plugin/skills/classify-orphan-note/: SKILL.md
plugin/skills/review-ported-note/: SKILL.md
sync_my_zettels/: __init__.py  assign.py  assign_apply.py  cli.py  config.py  folgezettel.py  inventory.py  links.py  matching.py  normalize.py  port.py  roots.py  verify.py  wire_backlinks.py
sync_my_zettels/elisp/: normalize-apply.el  wire-backlinks.el
tests/: test_assign_apply.py  test_folgezettel.py  test_inventory.py  test_links.py  test_matching.py  test_normalize.py  test_port.py  test_roots.py  test_wire_backlinks.py
tests/fixtures/obsidian/: 00.0 Index of indices.md  1. Crystallography.md  1.1 Diffraction.md  7. Writing.md
tests/fixtures/org-roam/: 20240101000001-crystallography.org  20240101000002-diffraction.org  20240101000003-orphan.org
